frontend/test/should_fail/pattern_004.grg
pattern Foo() modify(-a:Edge->)
{
	:Node;
	
	modify {
	}
}

rule r {
	. -b:Edge-> .; 
	foo:Foo();
	modify {
		foo(b);
	}
}